[Nav:bug] Correct margin and padding on nav header and correct alignements.

--- a/app/scss/blocs/_header.scss
+++ b/app/scss/blocs/_header.scss
@@ -1,8 +1,10 @@
 .header {
   width: 95%;
-  margin: 11px auto;
+  margin: auto;
+  padding: 11px 0;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   position: relative;
   @include medium {
     width: 95%;
